fix: fixed <p> with fonts

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             ПОКОРЯЙТЕ ВОЛНЫ <br />
             ВМЕСТЕ С НАМИ
           </h1>
-          <p class="text-20">
+          <p>
             SurfTrainCo предлагает вам доступное, <br />
             комплексное и приятное обучение серфингу <br />
             для всех уровней навыков и возрастов
@@ -110,7 +110,7 @@
           <div class="company-both">
             <div class="company-about">
               <h3>SurfTrainCo —</h3>
-              <p class="text-20">
+              <p>
                 это компания по обучению серфингу, <br />
                 расположенная в Москве, которая <br />
                 открылась в 2018 году. <br />
@@ -139,7 +139,7 @@
               />
               <div class="students">
                 <h3>2000+</h3>
-                <p class="text-20">учеников</p>
+                <p>учеников</p>
               </div>
             </div>
           </div>
@@ -167,11 +167,11 @@
                   «Лучший инструктор <br />
                   по серфингу 2022»
                 </h3>
-                <p class="text-20">
+                <p>
                   от международной организации <br />
                   Surfers Against Sewage (SAS)
                 </p>
-                <p class="text-20">(2022)</p>
+                <p>(2022)</p>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
               <div class="easy-start-border">
                 <img src="public/Иконка1.svg" alt="icon-1" class="svg-tarif" />
                 <div class="easy-start-text">
-                  <p class="text-20">-тариф-</p>
+                  <p>-тариф-</p>
                   <h3>Easy Start</h3>
                 </div>
                 <div class="easy-start-info">
@@ -194,38 +194,36 @@
                     <img src="public/icon1.svg" alt="" />
                     <div class="course-text">
                       <p class="text-16">длительность курса</p>
-                      <p class="text-20">5 уроков</p>
+                      <p>5 уроков</p>
                     </div>
                   </div>
                   <div class="lesson">
                     <img src="public/icon2.svg" alt="" />
                     <div class="lesson-text">
                       <p class="text-16">длительность урока</p>
-                      <p class="text-20">45 минут</p>
+                      <p>45 минут</p>
                     </div>
                   </div>
                 </div>
                 <div class="easy-start-description">
                   <div class="easy-start-description-mark-1">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
-                      Воссозданный искуственный речной порог
-                    </p>
+                    <p>Воссозданный искуственный речной порог</p>
                   </div>
                   <div class="easy-start-description-mark-2">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">Доска с плавниками, как на океане</p>
+                    <p>Доска с плавниками, как на океане</p>
                   </div>
                   <div class="easy-start-description-mark-3">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Даёт возможность отработать технику поворотов, <br />
                       трюки на волне, развить баланс и мышечную память
                     </p>
                   </div>
                   <div class="easy-start-description-mark-4">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Помогает подготовиться к катанию на океанских <br />
                       волнах (работа тела после поп-ап)
                     </p>
@@ -235,16 +233,14 @@
                   <p class="price-1">29 000 руб.</p>
                   <p class="price-2">12 990 руб.</p>
                 </div>
-                <button name="Choose" class="choose text-20">
-                  Выбрать тариф
-                </button>
+                <button name="Choose" class="choose">Выбрать тариф</button>
               </div>
             </div>
             <div class="flow-rider">
               <div class="easy-start-border">
                 <img src="public/Иконка2.svg" alt="icon-1" class="svg-tarif" />
                 <div class="easy-start-text">
-                  <p class="text-20">-тариф-</p>
+                  <p>-тариф-</p>
                   <h3>Flow Rider</h3>
                 </div>
                 <div class="easy-start-info">
@@ -252,42 +248,42 @@
                     <img src="public/icon1.svg" alt="" />
                     <div class="course-text">
                       <p class="text-16">длительность курса</p>
-                      <p class="text-20">5 уроков</p>
+                      <p>5 уроков</p>
                     </div>
                   </div>
                   <div class="lesson">
                     <img src="public/icon2.svg" alt="" />
                     <div class="lesson-text">
                       <p class="text-16">длительность урока</p>
-                      <p class="text-20">45 минут</p>
+                      <p>45 минут</p>
                     </div>
                   </div>
                 </div>
                 <div class="flow-rider-description">
                   <div class="flow-rider-description-mark-1">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Напор воды, направленный вверх по натянутой <br />
                       тканевой поверхности
                     </p>
                   </div>
                   <div class="flow-rider-description-mark-2">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Доска без плавников, нечто среднее между <br />
                       скейтбордом и сноубордом
                     </p>
                   </div>
                   <div class="flow-rider-description-mark-3">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Даёт возможность развить баланс и получить яркие <br />
                       эмоции от катания на волне
                     </p>
                   </div>
                   <div class="flow-rider-description-mark-4">
                     <img src="public/Иконка-галочка.svg" alt="" />
-                    <p class="text-20">
+                    <p>
                       Возможность поймать удовольствие от движения и <br />
                       маневрирования на доске по водному потоку
                     </p>
@@ -297,9 +293,7 @@
                   <p class="price-1">22 000 руб.</p>
                   <p class="price-2">10 990 руб.</p>
                 </div>
-                <button name="Choose" class="choose text-20">
-                  Выбрать тариф
-                </button>
+                <button name="Choose" class="choose">Выбрать тариф</button>
               </div>
             </div>
           </div>
