fix: discounts fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </p>
         </div>
         <div class="description-photo">
-          <div class="photo-item">
+          <div class="description-photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Профессиональное руководство</h4>
             <p>
@@ -61,7 +61,7 @@
               совершенствоваться.
             </p>
           </div>
-          <div class="photo-item">
+          <div class="description-photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4 class="">Качественное оборудование</h4>
             <p>
@@ -70,7 +70,7 @@
               и получать удовольствие.
             </p>
           </div>
-          <div class="photo-item">
+          <div class="description-photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Благоприятная обстановка</h4>
             <p>
@@ -79,7 +79,7 @@
               со схожим опытом и целями.
             </p>
           </div>
-          <div class="photo-item">
+          <div class="description-photo-item">
             <img src="public/Vector 31.svg" alt="photo" />
             <h4>Дополнительные услуги</h4>
             <p>
@@ -90,7 +90,7 @@
             </p>
           </div>
         </div>
-        <div class="surfing">
+        <div class="company-text">
           <h2 style="text-align: left">СЕРФИНГ</h2>
           <h2 class="panton-h2" style="text-align: right">это стиль жизни</h2>
         </div>
@@ -99,16 +99,16 @@
             <img
               src="/public/Картинка серфера.png"
               alt="SurfTrainCo Screen"
-              class="company-surf"
+              class="company-surfer-photo"
             />
             <img
               src="public/Лого (2).svg"
               alt="logo"
-              class="company-surf-overlay"
+              class="company-surfer-overlay"
             />
           </div>
-          <div class="company-both">
-            <div class="company-about">
+          <div class="company-block">
+            <div class="company-block-about">
               <h3>SurfTrainCo —</h3>
               <p>
                 это компания по обучению серфингу, <br />
@@ -121,23 +121,23 @@
                 для всех уровней навыков и возрастов.
               </p>
             </div>
-            <div class="company-count">
+            <div class="company-block-members">
               <img
                 src="public/Аватар 1.svg"
                 alt="Аватар 1"
-                class="svg-avatar"
+                class="company-block-members-svg"
               />
               <img
                 src="public/Аватар 2.svg"
                 alt="Аватар 2"
-                class="svg-avatar"
+                class="company-block-members-svg"
               />
               <img
                 src="public/Аватар 3.svg"
                 alt="Аватар 3"
-                class="svg-avatar"
+                class="company-block-members-svg"
               />
-              <div class="students">
+              <div class="company-block-members-text">
                 <h3>2000+</h3>
                 <p>учеников</p>
               </div>
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="comment">
-          <p>
+          <p class="comment-text">
             Не бойтесь испытать себя и свои возможности - поддайтесь волнам и
             пусть они помогут вам раскрыть свой истинный потенциал. Погрузитесь
             в мир серфинга и почувствуйте, как ваша жизнь наполняется яркими
@@ -153,15 +153,19 @@
           </p>
         </div>
         <div class="rewards">
-          <img src="public/Подложка вырез (1).png" alt="" class="bg-image2" />
+          <img
+            src="public/Подложка вырез (1).png"
+            alt=""
+            class="rewards-background-image"
+          />
           <div class="rewards-text">
             <h2>НАГРАДЫ</h2>
             <h2 class="panton-h2">нашего клуба</h2>
           </div>
-          <div class="rewards-photo-1-background">
-            <div class="rewards-photo-1">
+          <div class="rewards-photo-background">
+            <div class="rewards-photo">
               <img src="public/Картинка.png" alt="reward png" />
-              <div class="rewards-photo-1-text">
+              <div class="rewards-photo-text">
                 <p class="text-16">Награда</p>
                 <h3>
                   «Лучший инструктор <br />
@@ -184,44 +188,48 @@
           <div class="cards">
             <div class="easy-start">
               <div class="easy-start-border">
-                <img src="public/Иконка1.svg" alt="icon-1" class="svg-tarif" />
+                <img
+                  src="public/Иконка1.svg"
+                  alt="icon-1"
+                  class="easy-start-border-svg"
+                />
                 <div class="easy-start-text">
                   <p>-тариф-</p>
                   <h3>Easy Start</h3>
                 </div>
                 <div class="easy-start-info">
-                  <div class="course">
+                  <div class="easy-start-info-course">
                     <img src="public/icon1.svg" alt="" />
-                    <div class="course-text">
+                    <div class="easy-start-info-course-text">
                       <p class="text-16">длительность курса</p>
                       <p>5 уроков</p>
                     </div>
                   </div>
-                  <div class="lesson">
+                  <div class="easy-start-info-lesson">
                     <img src="public/icon2.svg" alt="" />
-                    <div class="lesson-text">
+                    <div class="easy-start-info-lesson-text">
                       <p class="text-16">длительность урока</p>
                       <p>45 минут</p>
                     </div>
                   </div>
                 </div>
                 <div class="easy-start-description">
-                  <div class="easy-start-description-mark-1">
+                  <div class="easy-start-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>Воссозданный искуственный речной порог</p>
                   </div>
-                  <div class="easy-start-description-mark-2">
+                  <div class="easy-start-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>Доска с плавниками, как на океане</p>
                   </div>
-                  <div class="easy-start-description-mark-3">
+                  <div class="easy-start-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Даёт возможность отработать технику поворотов, <br />
                       трюки на волне, развить баланс и мышечную память
                     </p>
                   </div>
-                  <div class="easy-start-description-mark-4">
+                  <div class="easy-start-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Помогает подготовиться к катанию на океанских <br />
@@ -230,28 +238,34 @@
                   </div>
                 </div>
                 <div class="easy-start-price">
-                  <p class="price-1">29 000 руб.</p>
-                  <p class="price-2">12 990 руб.</p>
+                  <p class="easy-start-price-old">29 000 руб.</p>
+                  <p class="easy-start-price-new">12 990 руб.</p>
                 </div>
-                <button name="Choose" class="choose">Выбрать тариф</button>
+                <button name="Choose" class="easy-start-button">
+                  Выбрать тариф
+                </button>
               </div>
             </div>
             <div class="flow-rider">
-              <div class="easy-start-border">
-                <img src="public/Иконка2.svg" alt="icon-1" class="svg-tarif" />
-                <div class="easy-start-text">
+              <div class="flow-rider-border">
+                <img
+                  src="public/Иконка2.svg"
+                  alt="icon-1"
+                  class="flow-rider-border-svg"
+                />
+                <div class="flow-rider-text">
                   <p>-тариф-</p>
                   <h3>Flow Rider</h3>
                 </div>
-                <div class="easy-start-info">
-                  <div class="course">
+                <div class="flow-rider-info">
+                  <div class="flow-rider-info-course">
                     <img src="public/icon1.svg" alt="" />
-                    <div class="course-text">
+                    <div class="flow-rider-info-course-text">
                       <p class="text-16">длительность курса</p>
                       <p>5 уроков</p>
                     </div>
                   </div>
-                  <div class="lesson">
+                  <div class="flow-rider-info-lesson">
                     <img src="public/icon2.svg" alt="" />
                     <div class="lesson-text">
                       <p class="text-16">длительность урока</p>
@@ -260,28 +274,28 @@
                   </div>
                 </div>
                 <div class="flow-rider-description">
-                  <div class="flow-rider-description-mark-1">
+                  <div class="flow-rider-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Напор воды, направленный вверх по натянутой <br />
                       тканевой поверхности
                     </p>
                   </div>
-                  <div class="flow-rider-description-mark-2">
+                  <div class="flow-rider-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Доска без плавников, нечто среднее между <br />
                       скейтбордом и сноубордом
                     </p>
                   </div>
-                  <div class="flow-rider-description-mark-3">
+                  <div class="flow-rider-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Даёт возможность развить баланс и получить яркие <br />
                       эмоции от катания на волне
                     </p>
                   </div>
-                  <div class="flow-rider-description-mark-4">
+                  <div class="flow-rider-description-mark">
                     <img src="public/Иконка-галочка.svg" alt="" />
                     <p>
                       Возможность поймать удовольствие от движения и <br />
@@ -289,61 +303,96 @@
                     </p>
                   </div>
                 </div>
-                <div class="easy-start-price">
-                  <p class="price-1">22 000 руб.</p>
-                  <p class="price-2">10 990 руб.</p>
+                <div class="flow-rider-price">
+                  <p class="flow-rider-price-old">22 000 руб.</p>
+                  <p class="flow-rider-price-new">10 990 руб.</p>
                 </div>
-                <button name="Choose" class="choose">Выбрать тариф</button>
+                <button name="Choose" class="flow-rider-button">
+                  Выбрать тариф
+                </button>
               </div>
             </div>
           </div>
         </div>
         <div class="discounts">
-          <img src="public/Подложка вырез.png" alt="" class="bg-image2" />
+          <img
+            src="public/Подложка вырез.png"
+            alt=""
+            class="discounts-background-image"
+          />
           <div class="discounts-text">
             <h2>АКЦИИ</h2>
             <h2 class="panton-h2">и скидки</h2>
           </div>
           <div class="discounts-photos">
-            <div class="discounts-photos-card1">
-              <img src="public/content1.png" alt="" class="discount-png" />
-              <div class="discounts-photos-text-1">
+            <div class="discounts-photos-card">
+              <img
+                src="public/content1.png"
+                alt=""
+                class="discounts-photos-card-png"
+              />
+              <div class="discounts-photos-card-text-up">
                 <p class="text-16">До 25.04.2024</p>
-                <img src="public/Vector 19.svg" alt="" />
               </div>
-              <p class="discounts-photos-text-2">
-                Бесплатный урок серфинга <br />
-                для первого посещения
-              </p>
+              <div class="discounts-photos-card-text-down">
+                <p>
+                  Бесплатный урок серфинга <br />
+                  для первого посещения
+                </p>
+              </div>
+              <img
+                src="public/Vector 19.svg"
+                alt=""
+                class="discounts-photos-card-text-svg"
+              />
             </div>
-            <div class="discounts-photos-card2">
-              <img src="public/content2.png" alt="" class="discount-png" />
-              <div class="discounts-photos-text-1">
+            <div class="discounts-photos-card">
+              <img
+                src="public/content2.png"
+                alt=""
+                class="discounts-photos-card-png"
+              />
+              <div class="discounts-photos-card-text-up">
                 <p class="text-16">Бессрочно</p>
-                <img src="public/Vector 19.svg" alt="" />
               </div>
-              <p class="discounts-photos-text-2">
-                Сертификация или аттестация <br />
-                по окончании курса
-              </p>
+              <div class="discounts-photos-card-text-down">
+                <p>
+                  Сертификация или аттестация <br />
+                  по окончании курса
+                </p>
+              </div>
+              <img
+                src="public/Vector 19.svg"
+                alt=""
+                class="discounts-photos-card-text-svg"
+              />
             </div>
-            <div class="discounts-photos-card3">
-              <img src="public/content3.png" alt="" class="discount-png" />
-              <div class="discounts-photos-text-1">
+            <div class="discounts-photos-card">
+              <img
+                src="public/content3.png"
+                alt=""
+                class="discounts-photos-card-png"
+              />
+              <div class=""></div>
+              <div class="discounts-photos-card-text-up">
                 <p class="text-16">До 12.05.2024</p>
-                <img src="public/Vector 19.svg" alt="" />
               </div>
-
-              <p class="discounts-photos-text-2">
-                Пакет серфинга <br />
-                для двоих
-              </p>
+              <img
+                src="public/Vector 19.svg"
+                alt=""
+                class="discounts-photos-card-text-svg"
+              />
+              <div class="discounts-photos-card-text-down">
+                <p>
+                  Пакет серфинга <br />
+                  для двоих
+                </p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="comment-2">
-          <img src="public/Волна.svg" alt="" class="wave-svg" />
-          <p>
+        <div class="comment">
+          <p class="comment-text">
             Помните, что каждый ваш выход на доску - это возможность <br />
             выйти за пределы своих комфортных зон и стать лучше, сильнее <br />
             и увереннее. Поверьте в себя, стремитесь к новым вершинам <br />
@@ -351,33 +400,37 @@
           </p>
         </div>
         <div class="order">
-          <img src="public/Подложка вырез (2).png" alt="" class="bg-image2" />
+          <img
+            src="public/Подложка вырез (2).png"
+            alt=""
+            class="order-background-image"
+          />
           <div class="order-text">
             <h2>ЗАПИСЬ</h2>
             <h2 class="panton-h2">на занятие</h2>
           </div>
-          <div class="order-form-all">
-            <div class="order-form-forms">
-              <select name="" id="" class="order-form">
+          <div class="order-block">
+            <div class="order-block-form">
+              <select name="" id="" class="order-block-form">
                 <option value="">Выберите дату</option>
               </select>
-              <select name="" id="" class="order-form">
+              <select name="" id="" class="order-block-form">
                 <option value="">Выберите время</option>
               </select>
-              <select name="" id="" class="order-form-tarif order-form">
+              <select name="" id="" class="order-block-form-tarif order-form">
                 <option value="">Выберите подходящий тариф</option>
               </select>
               <input
                 type="text"
-                class="order-form-text"
+                class="order-block-text"
                 placeholder="Иванов Иван"
               />
               <input
                 type="text"
-                class="order-form-text"
+                class="order-block-text"
                 placeholder="8(999) 999-99-99"
               />
-              <button class="order-form order-form-button">
+              <button class="order-block order-block-button">
                 Записаться онлайн
               </button>
               <p>
