--- a/index.html
+++ b/index.html
@@ -411,13 +411,17 @@
           </div>
           <div class="order-block">
             <div class="order-block-form">
-              <select name="" id="" class="order-block-form">
+              <select name="" id="" class="order-block-form-table">
                 <option value="">Выберите дату</option>
               </select>
-              <select name="" id="" class="order-block-form">
+              <select name="" id="" class="order-block-form-table">
                 <option value="">Выберите время</option>
               </select>
-              <select name="" id="" class="order-block-form-tarif order-form">
+              <select
+                name=""
+                id=""
+                class="order-block-form-table-tarif order-block-form-table"
+              >
                 <option value="">Выберите подходящий тариф</option>
               </select>
               <input
@@ -438,7 +442,7 @@
                 <a href="#">с политикой обработки данных</a>
               </p>
             </div>
-            <img src="public/image 3 1.png" alt="" class="order-photo" />
+            <img src="public/image 3 1.png" alt="" class="order-block-photo" />
           </div>
         </div>
       </div>
