--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="company-text">
           <h2 style="text-align: left">СЕРФИНГ</h2>
-          <h2 class="panton-h2" style="text-align: right">это стиль жизни</h2>
+          <h2 class="panton-h2" style="text-align: center">это стиль жизни</h2>
         </div>
         <div class="company">
           <div class="company-screen">
@@ -443,6 +443,51 @@
               </p>
             </div>
             <img src="public/image 3 1.png" alt="" class="order-block-photo" />
+          </div>
+        </div>
+        <div class="location">
+          <div class="location-text">
+            <h2>МЫ НА КАРТЕ</h2>
+            <h2 class="panton-h2">где искать?</h2>
+          </div>
+          <div class="location-address">
+            <div class="location-address-social">
+              <p>Социальные сети:</p>
+              <div class="location-address-social-svg">
+                <img src="public/Инст.svg" alt="" class="instagram" />
+                <img src="public/Тик ток.svg" alt="" class="tik-tok" />
+                <img src="public/Вконтакте.svg" alt="" class="vkontakte" />
+              </div>
+            </div>
+            <div class="location-address-contacts">
+              <p>+7 (910) 684-90-53</p>
+              <div class="location-address-contacts-svg">
+                <img
+                  src="public/Телеграм.svg"
+                  alt="Telegram"
+                  class="telegram"
+                />
+                <img src="public/Ватсап.svg" alt="WhatsApp" class="whatsapp" />
+                <img src="public/Вайбер.svg" alt="Viber" class="viber" />
+              </div>
+            </div>
+            <img src="public/Кнопка онлайн-запись.png" alt="" />
+            <div class="location-address-tag">
+              <img
+                src="public/Location.png"
+                alt=""
+                class="location-address-tag-image"
+              />
+              <p>
+                ул. Черкизова 14,<br />
+                Москва
+              </p>
+            </div>
+
+            <div class="location-address-bus">
+              <h4>Как добраться?</h4>
+              <p>Маршруты: 139, 28б</p>
+            </div>
           </div>
         </div>
       </div>
