--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           />
           <h4 class="header-container-contacts-number">+7(910) 684-90-53</h4>
         </div>
-        <a href="#" class="header-container-details text-16">Подробнее</a>
+        <div class="header-container-details">
+          <a href="#" class="text-16">Подробнее</a>
+          <img src="public/Vector 19.svg" alt="" />
+        </div>
       </div>
     </header>
     <div class="header-container-image"></div>
