fix: small fixes

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
           <h2 class="panton-h2" style="text-align: center">это стиль жизни</h2>
         </div>
         <div class="company">
+          <img
+            src="public/Подложка вырез (1).png"
+            alt=""
+            class="company-background-image"
+          />
           <div class="company-screen">
             <img
               src="/public/Картинка серфера.png"
