feat: added @media 1024px

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
     </header>
-    <div class="header-container-image"></div>
+    <img src="public/bg-image 1.png" alt="" class="header-container-image" />
     <main>
       <div class="main-container">
         <div class="preview">
@@ -56,7 +56,11 @@
         </div>
         <div class="description-photo">
           <div class="description-photo-item">
-            <img src="public/Vector 31.svg" alt="photo" />
+            <img
+              src="public/description-1.png"
+              alt=""
+              class="description-photo-item-png"
+            />
             <h4>Профессиональное руководство</h4>
             <p>
               опытные инструкторы помогут <br />
@@ -65,7 +69,11 @@
             </p>
           </div>
           <div class="description-photo-item">
-            <img src="public/Vector 31.svg" alt="photo" />
+            <img
+              src="public/description-2.png"
+              alt=""
+              class="description-photo-item-png"
+            />
             <h4 class="">Качественное оборудование</h4>
             <p>
               доски и гидрокостюмы помогут <br />
@@ -74,7 +82,12 @@
             </p>
           </div>
           <div class="description-photo-item">
-            <img src="public/Vector 31.svg" alt="photo" />
+            <img
+              src="public/description-3.png"
+              alt=""
+              class="description-photo-item-png"
+            />
+
             <h4>Благоприятная обстановка</h4>
             <p>
               благоприятная и безопасная <br />
@@ -83,13 +96,16 @@
             </p>
           </div>
           <div class="description-photo-item">
-            <img src="public/Vector 31.svg" alt="photo" />
+            <img
+              src="public/description-4.png"
+              alt=""
+              class="description-photo-item-png"
+            />
             <h4>Дополнительные услуги</h4>
             <p>
               услуги фотографий и видео помогут <br />
               вам запечатлить и поделиться <br />
               опытом серфинга. <br />
-              awdawd
             </p>
           </div>
         </div>
@@ -172,7 +188,11 @@
           </div>
           <div class="rewards-photo-background">
             <div class="rewards-photo">
-              <img src="public/Картинка.png" alt="reward png" />
+              <img
+                src="public/Картинка.png"
+                alt="reward png"
+                class="rewards-photo-png"
+              />
               <div class="rewards-photo-text">
                 <p class="text-16">Награда</p>
                 <h3>
@@ -402,7 +422,8 @@
         <div class="comment">
           <p class="comment-text">
             Помните, что каждый ваш выход на доску - это возможность <br />
-            выйти за пределы своих комфортных зон и стать лучше, сильнее <br />
+            выйти за пределы своих комфортных зон и стать лучше, сильнее
+            <br />
             и увереннее. Поверьте в себя, стремитесь к новым вершинам <br />
             и не забывайте наслаждаться каждым мгновением на доске.
           </p>
