fix: @media 1024px

--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
                     <img src="public/icon1.svg" alt="" />
                     <div class="easy-start-info-course-text">
                       <p class="text-16">длительность курса</p>
-                      <p>5 уроков</p>
+                      <p class="text-20">5 уроков</p>
                     </div>
                   </div>
                   <div class="easy-start-info-lesson">
                     <img src="public/icon2.svg" alt="" />
                     <div class="easy-start-info-lesson-text">
                       <p class="text-16">длительность урока</p>
-                      <p>45 минут</p>
+                      <p class="text-20">45 минут</p>
                     </div>
                   </div>
                 </div>
