--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
                     <img src="public/icon1.svg" alt="" />
                     <div class="flow-rider-info-course-text">
                       <p class="text-16">длительность курса</p>
-                      <p>5 уроков</p>
+                      <p class="text-20">5 уроков</p>
                     </div>
                   </div>
                   <div class="flow-rider-info-lesson">
                     <img src="public/icon2.svg" alt="" />
                     <div class="lesson-text">
                       <p class="text-16">длительность урока</p>
-                      <p>45 минут</p>
+                      <p class="text-20">45 минут</p>
                     </div>
                   </div>
                 </div>
@@ -475,47 +475,59 @@
           </div>
         </div>
         <div class="location">
-          <div class="location-text">
-            <h2>МЫ НА КАРТЕ</h2>
-            <h2 class="panton-h2">где искать?</h2>
-          </div>
-          <div class="location-address">
-            <div class="location-address-social">
-              <p>Социальные сети:</p>
-              <div class="location-address-social-svg">
-                <img src="public/Инст.svg" alt="" class="instagram" />
-                <img src="public/Тик ток.svg" alt="" class="tik-tok" />
-                <img src="public/Вконтакте.svg" alt="" class="vkontakte" />
-              </div>
+          <div class="location-address-map">
+            <div class="location-text">
+              <h2>МЫ НА КАРТЕ</h2>
+              <h2 class="panton-h2">где искать?</h2>
             </div>
-            <div class="location-address-contacts">
-              <p>+7 (910) 684-90-53</p>
-              <div class="location-address-contacts-svg">
+            <img src="public/МЕТКА.svg" alt="" class="location-address-svg" />
+            <img
+              src="public/address.png"
+              alt=""
+              class="location-address-background"
+            />
+            <div class="location-address">
+              <div class="location-address-social">
+                <p>Социальные сети:</p>
+                <div class="location-address-social-svg">
+                  <img src="public/Инст.svg" alt="" class="instagram" />
+                  <img src="public/Тик ток.svg" alt="" class="tik-tok" />
+                  <img src="public/Вконтакте.svg" alt="" class="vkontakte" />
+                </div>
+              </div>
+              <div class="location-address-contacts">
+                <p>+7 (910) 684-90-53</p>
+                <div class="location-address-contacts-svg">
+                  <img
+                    src="public/Телеграм.svg"
+                    alt="Telegram"
+                    class="telegram"
+                  />
+                  <img
+                    src="public/Ватсап.svg"
+                    alt="WhatsApp"
+                    class="whatsapp"
+                  />
+                  <img src="public/Вайбер.svg" alt="Viber" class="viber" />
+                </div>
+              </div>
+              <img src="public/Кнопка онлайн-запись.png" alt="" />
+              <div class="location-address-tag">
                 <img
-                  src="public/Телеграм.svg"
-                  alt="Telegram"
-                  class="telegram"
+                  src="public/Location.png"
+                  alt=""
+                  class="location-address-tag-image"
                 />
-                <img src="public/Ватсап.svg" alt="WhatsApp" class="whatsapp" />
-                <img src="public/Вайбер.svg" alt="Viber" class="viber" />
+                <p>
+                  ул. Черкизова 14,<br />
+                  Москва
+                </p>
               </div>
-            </div>
-            <img src="public/Кнопка онлайн-запись.png" alt="" />
-            <div class="location-address-tag">
-              <img
-                src="public/Location.png"
-                alt=""
-                class="location-address-tag-image"
-              />
-              <p>
-                ул. Черкизова 14,<br />
-                Москва
-              </p>
-            </div>
 
-            <div class="location-address-bus">
-              <h4>Как добраться?</h4>
-              <p>Маршруты: 139, 28б</p>
+              <div class="location-address-bus">
+                <h4>Как добраться?</h4>
+                <p>Маршруты: 139, 28б</p>
+              </div>
             </div>
           </div>
         </div>
