feat: added footer

--- a/index.html
+++ b/index.html
@@ -533,6 +533,43 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="footer-common">
+          <div class="footer-way">
+            <img src="public/Лого (1).svg" alt="" />
+            <p>
+              Свяжитесь с нами любым <br />
+              удобным способом
+            </p>
+            <div class="footer-contacts-svg">
+              <img src="public/Телеграм.svg" alt="Telegram" class="telegram" />
+              <img src="public/Ватсап.svg" alt="WhatsApp" class="whatsapp" />
+              <img src="public/Вайбер.svg" alt="Viber" class="viber" />
+            </div>
+          </div>
+          <div class="footer-contacts">
+            <h4>Контакты</h4>
+            <p>+7 (910) 684-90-53</p>
+            <p>SurfCocommerce@yandex.ru</p>
+            <p>г. Москва, ул. Черкизова 14</p>
+            <p>Работаем с 8:00-22:00</p>
+          </div>
+          <div class="footer-client">
+            <h4>Для клиентов</h4>
+            <p>О нас</p>
+            <p>Награды</p>
+            <p>Тарифы</p>
+            <p>Акции</p>
+            <p>Контакты</p>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <p>(с) SurfTrainCo, 2023</p>
+          <p>Политика конфеденциальности</p>
+          <p>Публичная оферта</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
